--- a/index.html
+++ b/index.html
@@ -8,19 +8,25 @@
     </head>
     
     <body>
-        <div class="top">
+        <header>
             <div class="top_left">
                 <h1>Mathias MANET</h1>
-                <h2>Motion Design - Communication Digitale</h2>
+                <h2>Motion Design - Communication Digitale <br/>Stage
+                </h2>
             </div>
             <div class="top_right">
-                <img src="../asset/photo.jpg" alt="photo de moi" width="150" height="150">
-<!--                photo-->
+                <img src="../asset/photo.jpg" alt="photo de moi" width="300">
             </div>
-        </div>
+        </header> <br>
         <div class="bottom">
             <div class="bottom_left">
-                <div class="contact">
+                <div class="a_propos_de_moi">
+                    <i class="fas fa-phone-square"></i>
+                    <li>06 38 01 07 34</li>
+                    <li>contact.mathias@icloud.com</li>
+                    <li>Portfolio</li>
+                    <li>Linkedin</li> <br>
+                    <li>Permis B</li>
                 </div>
                 <div class="competences">
                     <h3>Compétences</h3>
@@ -29,15 +35,15 @@
                     <li>InDesign</li>
                     <li>Lightroom</li>
                     <li>After Effects</li>
-                    <li>Premiere Pro</li>
+                    <li>Premiere Pro</li> <br>
                     <li>Photographie, retouches</li>
                     <li>Cadrage, montage vidéo</li>
-                    <li>Prise de son, traitement audio</li>
-                    <li>Réseaux sociaux</li>
+                    <li>Prise de son, traitement audio</li> <br>
+                    <li>Réseaux sociaux</li> <br>
                     <li>Anglais</li>
                 </div>
                 <div class="contres_interet">
-                    <h2>Centres d'intérets</h2>
+                    <h3>Centres d'intérets</h3>
                     <li>Judo - ceinture marron</li>
                     <li>Jeu vidéo</li>
                     <li>Musique</li>
